Signed-off-by: bernie <bernie@hyx.com> 1.初始化原始界面
Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/App/css/view/index/main.css
+++ b/src/main/webapp/App/css/view/index/main.css
@@ -111,4 +111,4 @@ body:not(.sidebar-left-mini) #menu .sidebar-left-mini #menu .nav-header{position
 #footer p{padding:12px 0 0;text-align:center}
 #top > .navbar{border-top:3px solid #428bca;}
 #top > .navbar .dropdown-menu > li > a:hover,#top > .navbar .dropdown-menu > li > a:focus{background-color:#428bca}
-.viewport,#left{background-color:#333}
+/*.viewport,#left{background-color:#333}*/
