Signed-off-by: bernie <bernie@hyx.com> 背景轮播
Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/view/index.html
+++ b/src/main/webapp/WEB-INF/html/view/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-	<title></title>
+	<title>戴丝诺</title>
 	<meta name="view" content="view/index/main"/>
-	<link rel="stylesheet" href="/App/css/view/index/main.css"/>
+    <link rel="stylesheet" href="/App/css/global/helper.css"/>
+    <link rel="stylesheet" href="/App/css/view/index/main.css"/>
 </head>
 <body>
 </body>
