Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/WEB-INF/html/view/index.html
+++ b/src/main/webapp/WEB-INF/html/view/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title>戴丝诺</title>
     <meta name="view" content="view/index/main"/>
-    <meta name="defaultview" content="view/default"/>
+    <meta name="defaultview" content="view/global/default"/>
     <link rel="stylesheet" href="/App/css/global/helper.css"/>
     <link rel="stylesheet" href="/App/css/view/index/main.css"/>
 </head>
