--- a/src/main/webapp/App/css/global/helper.css
+++ b/src/main/webapp/App/css/global/helper.css
@@ -264,32 +264,32 @@ a.cbule5:visited {
 }
 .bgPictureShow {
   position: absolute;
-  height: 100%;
-  width: 100%;
-  min-width: 800px;
-  z-index: -1;
+  height: 800px;
+  min-width: 1200px;
   left: 0;
   top: 0;
+  z-index: -1;
 }
 .bgPictureShow .picUl img {
-  height: 100%;
+  height: 800px;
   width: 100%;
 }
 .imgPos {
   position: fixed;
   left: 98%;
   top: 150px;
+  z-index: 2;
 }
 .imgPos li {
   display: block;
   cursor: pointer;
 }
 #wrap {
-  height: 100%;
-  width: 100%;
-  min-width: 800px;
+  height: 660px;
+  width: 1080px;
+  margin: 0 auto;
 }
-.navigator {
+.navbox {
   width: 1080px;
   height: 40px;
   margin: 0 auto;
@@ -303,13 +303,10 @@ a.cbule5:visited {
   float: left;
   cursor: pointer;
   color: #d8943a;
+  position: relative;
 }
 .navig:hover {
   background-color: #00482c;
-}
-.mainNav {
-  width: 250px;
-  margin-right: 20px;
 }
 .homeNav,
 .diaofaNav,
@@ -319,6 +316,52 @@ a.cbule5:visited {
 .dnsNav {
   width: 120px;
   margin: 0 5px;
+}
+.navbox li {
+  width: 120px;
+  margin: 0 5px;
+  background-color: #006039;
+  height: 100%;
+  float: left;
+  cursor: pointer;
+  position: relative;
+}
+.navbox li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #d8943a;
+  text-decoration: none;
+}
+.navbox li .lit {
+  position: absolute;
+  display: none;
+  width: 120px;
+}
+.navbox li .lit a {
+  text-shadow: 1px 1px 0 #000;
+  line-height: 26px;
+  height: 26px;
+  display: block;
+  background-color: #000;
+  color: #fff;
+  font-size: 14px;
+  opacity: 0.2;
+  text-decoration: none;
+}
+.navbox .mainNav {
+  width: 250px;
+  margin-right: 20px;
+}
+.navbox li:hover {
+  background-color: #00482c;
+}
+#footer .footerInfo {
+  background-color: #006039;
+  color: #d8943a;
+  width: 1080px;
+  height: 40px;
+  margin: 0 auto;
 }
 html {
   margin: 0;
@@ -590,32 +633,32 @@ a.cbule5:visited {
 }
 .bgPictureShow {
   position: absolute;
-  height: 100%;
-  width: 100%;
-  min-width: 800px;
-  z-index: -1;
+  height: 800px;
+  min-width: 1200px;
   left: 0;
   top: 0;
+  z-index: -1;
 }
 .bgPictureShow .picUl img {
-  height: 100%;
+  height: 800px;
   width: 100%;
 }
 .imgPos {
   position: fixed;
   left: 98%;
   top: 150px;
+  z-index: 2;
 }
 .imgPos li {
   display: block;
   cursor: pointer;
 }
 #wrap {
-  height: 100%;
-  width: 100%;
-  min-width: 800px;
+  height: 660px;
+  width: 1080px;
+  margin: 0 auto;
 }
-.navigator {
+.navbox {
   width: 1080px;
   height: 40px;
   margin: 0 auto;
@@ -629,13 +672,10 @@ a.cbule5:visited {
   float: left;
   cursor: pointer;
   color: #d8943a;
+  position: relative;
 }
 .navig:hover {
   background-color: #00482c;
-}
-.mainNav {
-  width: 250px;
-  margin-right: 20px;
 }
 .homeNav,
 .diaofaNav,
@@ -645,4 +685,51 @@ a.cbule5:visited {
 .dnsNav {
   width: 120px;
   margin: 0 5px;
+}
+.navbox li {
+  width: 120px;
+  margin: 0 5px;
+  background-color: #006039;
+  height: 100%;
+  float: left;
+  cursor: pointer;
+  position: relative;
+}
+.navbox li a {
+  display: block;
+  width: 100%;
+  height: 100%;
+  color: #d8943a;
+  text-decoration: none;
+}
+.navbox li .lit {
+  position: absolute;
+  display: none;
+  width: 120px;
+}
+.navbox li .lit a {
+  text-shadow: 1px 1px 0 #000;
+  line-height: 26px;
+  height: 26px;
+  display: block;
+  background-color: #000;
+  color: #fff;
+  font-size: 14px;
+  opacity: 0.2;
+  text-decoration: none;
+}
+/*filter: alpha(opacity = 20)*/
+.navbox .mainNav {
+  width: 250px;
+  margin-right: 20px;
+}
+.navbox li:hover {
+  background-color: #00482c;
+}
+#footer .footerInfo {
+  background-color: #006039;
+  color: #d8943a;
+  width: 1080px;
+  height: 40px;
+  margin: 0 auto;
 }
