--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -196,48 +196,86 @@ a.cttt:hover
 	display: none 
 .bgPictureShow
 	position: absolute
-	height: 100%
-	width 100%
-	min-width 800px
-	z-index: -1
+	height: 800px
+	min-width 1200px
 	left 0
 	top 0
+	z-index -1
 	.picUl
 		img
-			height: 100%
+			height: 800px
 			width 100%
 .imgPos
 	position fixed
 	left 98%
 	top 150px
+	z-index 2
 	li
 		display: block
 		cursor: pointer
 #wrap
-	height: 100%
-	width: 100%
-	min-width: 800px
-.navigator
+	height 660px
+	width 1080px
+	margin 0 auto
+.navbox
 	width 1080px
 	height 40px
 	margin 0 auto
 	margin-top 50px
 	font-size: 18px
 	line-height: 36px
-
 .navig
 	background-color: #006039
 	height: 100%
 	float left
 	cursor pointer
 	color: #D8943A
-
+	position relative
 .navig:hover
 	background-color: #00482c
 
-.mainNav
-	width 250px
-	margin-right 20px
 .homeNav,.diaofaNav,.jishuNav,.anliNav,.shishangNav,.dnsNav
 	width 120px
 	margin 0 5px
+.navbox li
+	width 120px
+	margin 0 5px
+	background-color: #006039
+	height: 100%
+	float left
+	cursor pointer
+	position relative
+	a
+		display block
+		width 100%
+		height 100%
+		color: #D8943A
+		text-decoration none
+	.lit
+		position absolute
+		display none
+		width 120px
+		a
+			text-shadow: 1px 1px 0 #000000
+			line-height: 26px
+			height: 26px
+			display: block
+			background-color: #000
+			color: #fff
+			font-size: 14px
+			opacity 0.2
+			text-decoration none
+
+/*filter: alpha(opacity = 20)*/
+.navbox .mainNav
+	width 250px
+	margin-right 20px
+.navbox li:hover
+	background-color: #00482c
+#footer
+	.footerInfo
+		background-color: #006039
+		color: #D8943A
+		width: 1080px;
+		height: 40px;
+		margin: 0 auto;
