Signed-off-by: bernie <bernie@hyx.com> update

--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -260,10 +260,8 @@ a.cttt:hover
 			line-height: 26px
 			height: 26px
 			display: block
-			background-color: #000
 			color: #fff
 			font-size: 14px
-			opacity 0.2
 			text-decoration none
 
 /*filter: alpha(opacity = 20)*/
@@ -272,10 +270,11 @@ a.cttt:hover
 	margin-right 20px
 .navbox li:hover
 	background-color: #00482c
-#footer
-	.footerInfo
-		background-color: #006039
-		color: #D8943A
-		width: 1080px;
-		height: 40px;
-		margin: 0 auto;
+.footerInfo
+	background-color: #006039
+	color: #D8943A
+	width: 1080px
+	height: 40px
+	margin: 0 auto
+
+@import url('external.css');
