--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -218,12 +218,13 @@ a.cttt:hover
 	width 1080px
 	margin 0 auto
 .navbox
-	width 1080px
-	height 40px
 	margin 0 auto
-	margin-top 50px
 	font-size: 18px
 	line-height: 36px
+	color: #d8943a
+	min-width: 1080px
+	background-color: #006039
+
 .navig
 	background-color: #006039
 	height: 100%
@@ -240,7 +241,6 @@ a.cttt:hover
 .navbox li
 	width 120px
 	margin 0 5px
-	background-color: #006039
 	height: 100%
 	float left
 	cursor pointer
@@ -273,8 +273,45 @@ a.cttt:hover
 .footerInfo
 	background-color: #006039
 	color: #D8943A
-	width: 1080px
+	min-width: 1080px
 	height: 40px
 	margin: 0 auto
+.headMain
+	height 50px
+	width 1080px
+	margin 0 auto
+	.headLogo
+		width 200px
+		margin-left 100px
+		float left
 
-@import url('external.css');
+	.headTel
+		width 300px
+		margin-left 100px
+		float left
+	.headRight
+		width 220px
+		margin-left 100px
+		float left
+		.leaveMsg,.weixin,.email
+			float: left
+			margin-right 10px
+
+.headNav
+	height 36px
+	min-width 1080px
+	background-color: #00482c
+	margin 0 auto
+.headNavWrap
+	height 100%
+	width 800px
+	margin 0 auto
+.headSubDiv
+	width 100%
+	height 100px
+	display none
+	position absolute
+.headSubDivWrap
+	position relative
+.headSubContent
+	color #fff
