--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -1,12 +1,15 @@
-content
-	height 1080px
-	width 660px
+.content
+	height 660px
+	min-width 1080px
+	overflow-y hidden
+.contentWrap
+	margin-top 480px
 .contentDiv
 	width 260px
 	height 180px
 	float left
 	margin 0 5px
-	margin-top 480px
+	/*margin-top 480px*/
 	background-color: #006039
 	opacity 0.5
 
