--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -238,9 +238,8 @@ a.cttt:hover
 .homeNav,.diaofaNav,.jishuNav,.anliNav,.shishangNav,.dnsNav
 	width 120px
 	margin 0 5px
-.navbox li
-	width 120px
-	margin 0 5px
+.headNavWrap li
+	width 130px
 	height: 100%
 	float left
 	cursor pointer
@@ -263,8 +262,6 @@ a.cttt:hover
 			color: #fff
 			font-size: 14px
 			text-decoration none
-
-/*filter: alpha(opacity = 20)*/
 .navbox .mainNav
 	width 250px
 	margin-right 20px
@@ -284,7 +281,6 @@ a.cttt:hover
 		width 200px
 		margin-left 100px
 		float left
-
 	.headTel
 		width 300px
 		margin-left 100px
@@ -296,7 +292,6 @@ a.cttt:hover
 		.leaveMsg,.weixin,.email
 			float: left
 			margin-right 10px
-
 .headNav
 	height 36px
 	min-width 1080px
@@ -308,10 +303,45 @@ a.cttt:hover
 	margin 0 auto
 .headSubDiv
 	width 100%
-	height 100px
+	height 200px
 	display none
 	position absolute
 .headSubDivWrap
 	position relative
+	width 100%
+	height 100%
 .headSubContent
 	color #fff
+	width 800px
+	height 100%
+	margin 0 auto
+.headSubNavTile
+	width 100%
+	margin 10px 5px
+	height: 30px
+	float left
+	cursor pointer
+	border-bottom solid 1px #fff
+	a
+		text-shadow: 1px 1px 0 #000000
+		line-height: 26px
+		height: 26px
+		display: block
+		color: #fff
+		font-size: 18px
+		text-decoration none
+	a:hover
+		color: #d8943a
+		background-color: transparent;
+.headSubNav
+	float left
+	width 250px
+	height 100%
+	margin-right 80px
+	margin-top 30px
+.headSubImg
+	float left
+	width 200px
+	height 100%
+	img
+		margin-top: 20px
