--- a/src/main/webapp/WEB-INF/html/view/login.html
+++ b/src/main/webapp/WEB-INF/html/view/login.html
@@ -4,15 +4,15 @@
 	<meta charset="UTF-8">
 	<title></title>
 	<meta name="view" content="view/login/main"/>
-	<link rel="stylesheet" href="/App/assets/lib/bootstrap/css/bootstrap.css"/>
-	<link rel="stylesheet" href="/App/assets/lib/font-awesome/css/font-awesome.css">
-	<link rel="stylesheet" href="/App/assets/css/main.css"/>
-	<link rel="stylesheet" href="/App/assets/lib/magic/magic.css"/>
+	<link rel="stylesheet" href="../../App/assets/lib/bootstrap/css/bootstrap.css"/>
+	<link rel="stylesheet" href="../../App/assets/lib/font-awesome/css/font-awesome.css">
+	<link rel="stylesheet" href="../../App/assets/css/main.css"/>
+	<link rel="stylesheet" href="../../App/assets/lib/magic/magic.css"/>
 </head>
 <body class="login">
 <div class="container">
 	<div class="text-center">
-		<img src="/App/image/global/logo/logo_white.png" alt="Metis Logo">
+		<img src="../../App/image/global/logo/logo_white.png" alt="Metis Logo">
 	</div>
 	<div class="tab-content">
 		<div id="login" class="tab-pane active">
@@ -51,8 +51,8 @@
 	</div>
 </div>
 <!-- /container -->
-<script src="/App/lib/basic.js"></script>
-<script src="/App/config.js">
+<script src="../../App/lib/basic.js"></script>
+<script src="../../App/config.js">
 	require([$('meta[name=view]').attr('content')]);
 </script>
 </body>
