--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -5,11 +5,14 @@
 .contentWrap
 	margin-top 480px
 .contentDiv
-	width 260px
+	img
+		width 100%
+		height 180px
+.productInfo,.news,.joinUs
+	width 100%
 	height 180px
-	float left
-	margin 0 5px
-	/*margin-top 480px*/
-	background-color: #006039
-	opacity 0.5
-
+	background-color: #fff
+.contentNews,.contentProduct,.contentJoin
+	width 100%
+	height 360px
+	position: absolute
