--- a/src/main/webapp/WEB-INF/html/view/diaofa.html
+++ b/src/main/webapp/WEB-INF/html/view/diaofa.html
@@ -4,8 +4,8 @@
 	<title>戴丝诺</title>
     <meta name="view" content="view/diaofa/main"/>
     <meta name="defaultview" content="view/default"/>
-    <link rel="stylesheet" href="/App/css/global/helper.css"/>
-    <link rel="stylesheet" href="/App/css/view/diaofa/main.css"/>
+    <link rel="stylesheet" href="../../App/css/global/helper.css"/>
+    <link rel="stylesheet" href="../../App/css/view/diaofa/main.css"/>
 </head>
 <body>
 </body>
