--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -44,20 +44,19 @@ textarea
 
 /* 链接颜色 */
 a:link 
-	color: #2584B0
+	color: #fff
 	text-decoration: none
 
-
-a:visited 
-	color: #2584B0
+a:visited
+	color: #fff
 	text-decoration: none
 
-a:hover 
-	color: #2584B0
-	text-decoration: underline
+a:hover
+	color: #fff
+	text-decoration: none
 
-a:active 
-	color: #2584B0
+a:active
+	color: #fff
 
 .fl_ft 
 	float: left
