--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -5,14 +5,87 @@
 .contentWrap
 	margin-top 480px
 .contentDiv
+	width: 260px
+	height: 180px
+	float: left
+	margin: 0 5px
+	position: relative
+	overflow: hidden
 	img
 		width 100%
 		height 180px
-.productInfo,.news,.joinUs
+
+.productInfo
 	width 100%
 	height 180px
-	background-color: #fff
+	color #fff
+	.pruductTitle
+		height 40px
+		width 160px
+		float left
+		font-size 16px
+		color #d8943a
+	.productMore
+		float right
+		height 40px
+		width 80px
+		font-size 18px
+	.productList
+		height 140px
+		width 260px
+		float left
+		.productListImg
+			height 80px
+			width 80px
+			margin 5px
+			background-color: #e27c79
+			float left
+		.productListSummary
+			height 120px
+			width 160px
+			text-align center
+			float left
 .contentNews,.contentProduct,.contentJoin
 	width 100%
 	height 360px
 	position: absolute
+.news
+	width 100%
+	height 180px
+	color #fff
+	.newsTitle
+		height 40px
+		width 160px
+		float left
+		font-size 16px
+		color #d8943a
+	.newsMore
+		float right
+		height 40px
+		width 80px
+		font-size 18px
+	.newsList
+		height: 140px;
+		width: 260px;
+		float: left;
+		ul li
+			margin-top 10px
+			a
+				color #fff
+			.listTitle
+				display inline-block
+				width 150px
+				height 20px
+				overflow hidden
+			.listDate
+				display inline-block
+				float right
+.joinUs
+	width 100%
+	height 180px
+	color #fff
+	.joinUsTitle
+		height 40px
+		width 120px
+		float left
+		background-color: #ed2
