--- a/src/main/webapp/WEB-INF/html/view/diaofashishang.html
+++ b/src/main/webapp/WEB-INF/html/view/diaofashishang.html
@@ -2,10 +2,10 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>戴丝诺</title>
-    <meta name="view" content="view/diaofa/main"/>
+    <meta name="view" content="view/diaofazhishi/main"/>
     <meta name="defaultview" content="view/default"/>
     <link rel="stylesheet" href="../../App/css/global/helper.css"/>
-    <link rel="stylesheet" href="../../App/css/view/diaofa/main.css"/>
+    <link rel="stylesheet" href="../../App/css/view/diaofazhishi/main.css"/>
 </head>
 <body>
 </body>
