首页交互和内容添加
Signed-off-by: bernie <bernie@hyx.com>

--- a/src/main/webapp/App/css/global/helper.styl
+++ b/src/main/webapp/App/css/global/helper.styl
@@ -276,6 +276,7 @@ a.cttt:hover
 	height 50px
 	width 1080px
 	margin 0 auto
+	position: relative
 	.headLogo
 		width 200px
 		margin-left 100px
@@ -291,6 +292,23 @@ a.cttt:hover
 		.leaveMsg,.weixin,.email
 			float: left
 			margin-right 10px
+			cursor pointer
+	.headRightHide
+		.weixinHide
+			position absolute
+			display none
+			top 50px
+			left 850px
+			width 150px
+			height 150px
+		.emailHide
+			position absolute
+			display none
+			top 50px
+			left 900px
+			width 180px
+			height 40px
+			background-color: #ee0101
 .headNav
 	height 36px
 	min-width 1080px
