--- a/src/main/webapp/WEB-INF/html/view/zoujindsn.html
+++ b/src/main/webapp/WEB-INF/html/view/zoujindsn.html
@@ -2,10 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>戴丝诺</title>
-    <meta name="view" content="view/shipingxinshang/main"/>
-    <meta name="defaultview" content="view/default"/>
-    <link rel="stylesheet" href="../../App/css/global/helper.css"/>
-    <link rel="stylesheet" href="../../App/css/view/shipingxinshang/main.css"/>
+    <meta name="view" content="view/zoujindsn/main"/>
+    <meta name="defaultview" content="view/global/default"/>
+    <link rel="stylesheet" href="../../App/css/view/zoujindsn/main.css"/>
 </head>
 <body>
 </body>
