--- a/src/main/webapp/App/css/global/helper.css
+++ b/src/main/webapp/App/css/global/helper.css
@@ -77,19 +77,19 @@ textarea {
   overflow-y: auto;
 }
 a:link {
-  color: #2584b0;
+  color: #fff;
   text-decoration: none;
 }
 a:visited {
-  color: #2584b0;
+  color: #fff;
   text-decoration: none;
 }
 a:hover {
-  color: #2584b0;
-  text-decoration: underline;
+  color: #fff;
+  text-decoration: none;
 }
 a:active {
-  color: #2584b0;
+  color: #fff;
 }
 .fl_ft {
   float: left;
@@ -318,8 +318,7 @@ a.cbule5:visited {
   margin: 0 5px;
 }
 .headNavWrap li {
-  width: 120px;
-  margin: 0 5px;
+  width: 130px;
   height: 100%;
   float: left;
   cursor: pointer;
@@ -364,6 +363,7 @@ a.cbule5:visited {
   height: 50px;
   width: 1080px;
   margin: 0 auto;
+  position: relative;
 }
 .headMain .headLogo {
   width: 200px;
@@ -386,6 +386,18 @@ a.cbule5:visited {
   float: left;
   margin-right: 10px;
 }
+.headMain .headRightHide {
+  position: absolute;
+}
+.headMain .headRightHide .weixinHide {
+  width: 150px;
+  height: 150px;
+}
+.headMain .headRightHide .emailHide {
+  width: 150px;
+  height: 40px;
+  background-color: #ee0101;
+}
 .headNav {
   height: 36px;
   min-width: 1080px;
@@ -405,18 +417,22 @@ a.cbule5:visited {
 }
 .headSubDivWrap {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 .headSubContent {
   color: #fff;
-  width: 500px;
+  width: 800px;
+  height: 100%;
   margin: 0 auto;
 }
 .headSubNavTile {
-  width: 120px;
-  margin: 0 5px;
+  width: 100%;
+  margin: 10px 5px;
   height: 30px;
   float: left;
   cursor: pointer;
+  border-bottom: solid 1px #fff;
 }
 .headSubNavTile a {
   text-shadow: 1px 1px 0 #000;
@@ -424,18 +440,27 @@ a.cbule5:visited {
   height: 26px;
   display: block;
   color: #fff;
-  font-size: 14px;
+  font-size: 18px;
   text-decoration: none;
+}
+.headSubNavTile a:hover {
+  color: #d8943a;
+  background-color: transparent;
 }
 .headSubNav {
   float: left;
-  width: 150px;
+  width: 250px;
   height: 100%;
+  margin-right: 80px;
+  margin-top: 30px;
 }
 .headSubImg {
   float: left;
   width: 200px;
   height: 100%;
+}
+.headSubImg img {
+  margin-top: 20px;
 }
 html {
   margin: 0;
@@ -517,19 +542,19 @@ textarea {
 }
 /* 链接颜色 */
 a:link {
-  color: #2584b0;
+  color: #fff;
   text-decoration: none;
 }
 a:visited {
-  color: #2584b0;
+  color: #fff;
   text-decoration: none;
 }
 a:hover {
-  color: #2584b0;
-  text-decoration: underline;
+  color: #fff;
+  text-decoration: none;
 }
 a:active {
-  color: #2584b0;
+  color: #fff;
 }
 .fl_ft {
   float: left;
@@ -761,8 +786,7 @@ a.cbule5:visited {
   margin: 0 5px;
 }
 .headNavWrap li {
-  width: 120px;
-  margin: 0 5px;
+  width: 130px;
   height: 100%;
   float: left;
   cursor: pointer;
@@ -807,6 +831,7 @@ a.cbule5:visited {
   height: 50px;
   width: 1080px;
   margin: 0 auto;
+  position: relative;
 }
 .headMain .headLogo {
   width: 200px;
@@ -829,6 +854,18 @@ a.cbule5:visited {
   float: left;
   margin-right: 10px;
 }
+.headMain .headRightHide {
+  position: absolute;
+}
+.headMain .headRightHide .weixinHide {
+  width: 150px;
+  height: 150px;
+}
+.headMain .headRightHide .emailHide {
+  width: 150px;
+  height: 40px;
+  background-color: #ee0101;
+}
 .headNav {
   height: 36px;
   min-width: 1080px;
@@ -848,18 +885,22 @@ a.cbule5:visited {
 }
 .headSubDivWrap {
   position: relative;
+  width: 100%;
+  height: 100%;
 }
 .headSubContent {
   color: #fff;
-  width: 500px;
+  width: 800px;
+  height: 100%;
   margin: 0 auto;
 }
 .headSubNavTile {
-  width: 120px;
-  margin: 0 5px;
+  width: 100%;
+  margin: 10px 5px;
   height: 30px;
   float: left;
   cursor: pointer;
+  border-bottom: solid 1px #fff;
 }
 .headSubNavTile a {
   text-shadow: 1px 1px 0 #000;
@@ -867,16 +908,25 @@ a.cbule5:visited {
   height: 26px;
   display: block;
   color: #fff;
-  font-size: 14px;
+  font-size: 18px;
   text-decoration: none;
+}
+.headSubNavTile a:hover {
+  color: #d8943a;
+  background-color: transparent;
 }
 .headSubNav {
   float: left;
-  width: 150px;
+  width: 250px;
   height: 100%;
+  margin-right: 80px;
+  margin-top: 30px;
 }
 .headSubImg {
   float: left;
   width: 200px;
   height: 100%;
+}
+.headSubImg img {
+  margin-top: 20px;
 }
