--- a/src/main/webapp/App/css/view/index/main.css
+++ b/src/main/webapp/App/css/view/index/main.css
@@ -77,19 +77,19 @@ textarea {
   overflow-y: auto;
 }
 a:link {
-  color: #2584b0;
+  color: #fff;
   text-decoration: none;
 }
 a:visited {
-  color: #2584b0;
+  color: #fff;
   text-decoration: none;
 }
 a:hover {
-  color: #2584b0;
-  text-decoration: underline;
+  color: #fff;
+  text-decoration: none;
 }
 a:active {
-  color: #2584b0;
+  color: #fff;
 }
 .fl_ft {
   float: left;
@@ -264,38 +264,38 @@ a.cbule5:visited {
 }
 .bgPictureShow {
   position: absolute;
-  height: 100%;
-  width: 100%;
-  min-width: 800px;
-  z-index: -1;
+  height: 800px;
+  min-width: 1200px;
   left: 0;
   top: 0;
+  z-index: -1;
 }
 .bgPictureShow .picUl img {
-  height: 100%;
+  height: 800px;
   width: 100%;
 }
 .imgPos {
   position: fixed;
   left: 98%;
   top: 150px;
+  z-index: 2;
 }
 .imgPos li {
   display: block;
   cursor: pointer;
 }
 #wrap {
-  height: 100%;
-  width: 100%;
-  min-width: 800px;
+  height: 660px;
+  width: 1080px;
+  margin: 0 auto;
 }
 .navbox {
-  width: 1080px;
-  height: 40px;
   margin: 0 auto;
-  margin-top: 50px;
   font-size: 18px;
   line-height: 36px;
+  color: #d8943a;
+  min-width: 1080px;
+  background-color: #006039;
 }
 .navig {
   background-color: #006039;
@@ -317,36 +317,32 @@ a.cbule5:visited {
   width: 120px;
   margin: 0 5px;
 }
-.navbox li {
-  width: 120px;
-  margin: 0 5px;
-  background-color: #006039;
+.headNavWrap li {
+  width: 130px;
   height: 100%;
   float: left;
   cursor: pointer;
   position: relative;
 }
-.navbox li a {
+.headNavWrap li a {
   display: block;
   width: 100%;
   height: 100%;
   color: #d8943a;
   text-decoration: none;
 }
-.navbox li .lit {
+.headNavWrap li .lit {
   position: absolute;
   display: none;
   width: 120px;
 }
-.navbox li .lit a {
+.headNavWrap li .lit a {
   text-shadow: 1px 1px 0 #000;
   line-height: 26px;
   height: 26px;
   display: block;
-  background-color: #000;
   color: #fff;
   font-size: 14px;
-  opacity: 0.2;
   text-decoration: none;
 }
 .navbox .mainNav {
@@ -356,89 +352,232 @@ a.cbule5:visited {
 .navbox li:hover {
   background-color: #00482c;
 }
-#footer {
+.footerInfo {
   background-color: #006039;
   color: #d8943a;
-}
-/* BEGIN header.head bar */
-.head {
-  border-bottom: 1px solid rgba(0,0,0,0.3);
-  box-shadow: 0px 1px 0px rgba(255,255,255,0.05) inset;
-  text-shadow: 0px 1px 0px rgba(0,0,0,0.5);
-  background-color: #333;
-}
-.head .search-bar {
+  min-width: 1080px;
+  height: 40px;
   margin: 0 auto;
-  padding: 10px 15px;
-  border-bottom: 1px solid rgba(0,0,0,0.3);
-  boxShadow: 1px 0 rgba(255,255,255,0.05);
 }
-.head .search-bar .main-search {
-  border-bottom: 1px solid #7c7c7c;
+.headMain {
+  height: 50px;
+  width: 1080px;
+  margin: 0 auto;
+  position: relative;
 }
-.head .search-bar .main-search input[type="text"] {
+.headMain .headLogo {
+  width: 200px;
+  margin-left: 100px;
+  float: left;
+}
+.headMain .headTel {
+  width: 300px;
+  margin-left: 100px;
+  float: left;
+}
+.headMain .headRight {
+  width: 220px;
+  margin-left: 100px;
+  float: left;
+}
+.headMain .headRight .leaveMsg,
+.headMain .headRight .weixin,
+.headMain .headRight .email {
+  float: left;
+  margin-right: 10px;
+  cursor: pointer;
+}
+.headMain .headRightHide .weixinHide {
+  position: absolute;
+  display: none;
+  top: 50px;
+  left: 850px;
+  width: 150px;
+  height: 150px;
+}
+.headMain .headRightHide .emailHide {
+  position: absolute;
+  display: none;
+  top: 50px;
+  left: 900px;
+  width: 180px;
+  height: 40px;
+  background-color: #ee0101;
+}
+.headNav {
+  height: 36px;
+  min-width: 1080px;
+  background-color: #00482c;
+  margin: 0 auto;
+}
+.headNavWrap {
+  height: 100%;
+  width: 800px;
+  margin: 0 auto;
+}
+.headSubDiv {
+  width: 100%;
+  height: 200px;
+  display: none;
+  position: absolute;
+}
+.headSubDivWrap {
+  position: relative;
+  width: 100%;
+  height: 100%;
+}
+.headSubContent {
+  color: #fff;
+  width: 800px;
+  height: 100%;
+  margin: 0 auto;
+}
+.headSubNavTile {
+  width: 100%;
+  margin: 10px 5px;
+  height: 30px;
+  float: left;
+  cursor: pointer;
+  border-bottom: solid 1px #fff;
+}
+.headSubNavTile a {
+  text-shadow: 1px 1px 0 #000;
+  line-height: 26px;
+  height: 26px;
+  display: block;
+  color: #fff;
+  font-size: 18px;
+  text-decoration: none;
+}
+.headSubNavTile a:hover {
+  color: #d8943a;
   background-color: transparent;
-  border-color: transparent;
-  color: #ccc;
 }
-.head .search-bar .main-search button,
-.head .search-bar .main-search input[type=submit] {
-  background-color: transparent;
-  border: transparent;
+.headSubNav {
+  float: left;
+  width: 250px;
+  height: 100%;
+  margin-right: 80px;
+  margin-top: 30px;
 }
-@media (min-width: 768px) {
-  .head .search-bar {
-    border-bottom-width: 0;
-    border-right: 1px solid rgba(0,0,0,0.3);
-    boxShadow: -1px 0px 0px rgba(255,255,255,0.05) inset;
-  }
-  .side-right .head .search-bar {
-    border-right-width: 0;
-    border-left: 1px solid rgba(0,0,0,0.3);
-    boxShadow: 1px 0px 0px rgba(255,255,255,0.05) inset;
-  }
+.headSubImg {
+  float: left;
+  width: 200px;
+  height: 100%;
 }
-.head .main-bar {
-  padding: 10px;
+.headSubImg img {
+  margin-top: 20px;
 }
-.head .main-bar h3 {
-  margin-top: 0;
-  margin-bottom: 0;
-  color: #bababa;
+.content {
+  height: 660px;
+  min-width: 1080px;
+  overflow-y: hidden;
 }
-@media (min-width: 768px) {
-  .head .main-bar h3 {
-    margin-top: 5px;
-  }
+.contentWrap {
+  margin-top: 480px;
 }
-@media (min-width: 768px) {
-  .search-bar {
-    float: left;
-    padding: 10px 4px;
-  }
-  .side-right .search-bar {
-    float: right;
-  }
-  .search-bar .input-small.form-control {
-    border-radius: 3px;
-  }
-  .mian-bar display block {
-    overflow: hidden;
-  }
+.contentDiv {
+  width: 260px;
+  height: 180px;
+  float: left;
+  margin: 0 5px;
+  position: relative;
+  overflow: hidden;
 }
-@media (min-width: 992px) {
-  .search-bar {
-    width: 250px;
-    padding: 10px 15px;
-  }
-  .search-bar .input-ground-btn {
-    display: table-cell;
-  }
-  .search-bar .input-small .form-control {
-    border-radius: 3px 0 0 3px;
-  }
-  .mini-sidebar .search-bar .input-small.form-control {
-    border-radius: 3px;
-  }
+.contentDiv img {
+  width: 100%;
+  height: 180px;
 }
-/** END header.head bar */
+.productInfo {
+  width: 100%;
+  height: 180px;
+  color: #fff;
+}
+.productInfo .pruductTitle {
+  height: 40px;
+  width: 160px;
+  float: left;
+  font-size: 16px;
+  color: #d8943a;
+}
+.productInfo .productMore {
+  float: right;
+  height: 40px;
+  width: 80px;
+  font-size: 18px;
+}
+.productInfo .productList {
+  height: 140px;
+  width: 260px;
+  float: left;
+}
+.productInfo .productList .productListImg {
+  height: 80px;
+  width: 80px;
+  margin: 5px;
+  background-color: #e27c79;
+  float: left;
+}
+.productInfo .productList .productListSummary {
+  height: 120px;
+  width: 160px;
+  text-align: center;
+  float: left;
+}
+.contentNews,
+.contentProduct,
+.contentJoin {
+  width: 100%;
+  height: 360px;
+  position: absolute;
+}
+.news {
+  width: 100%;
+  height: 180px;
+  color: #fff;
+}
+.news .newsTitle {
+  height: 40px;
+  width: 160px;
+  float: left;
+  font-size: 16px;
+  color: #d8943a;
+}
+.news .newsMore {
+  float: right;
+  height: 40px;
+  width: 80px;
+  font-size: 18px;
+}
+.news .newsList {
+  height: 140px;
+  width: 260px;
+  float: left;
+}
+.news .newsList ul li {
+  margin-top: 10px;
+}
+.news .newsList ul li a {
+  color: #fff;
+}
+.news .newsList ul li .listTitle {
+  display: inline-block;
+  width: 150px;
+  height: 20px;
+  overflow: hidden;
+}
+.news .newsList ul li .listDate {
+  display: inline-block;
+  float: right;
+}
+.joinUs {
+  width: 100%;
+  height: 180px;
+  color: #fff;
+}
+.joinUs .joinUsTitle {
+  height: 40px;
+  width: 120px;
+  float: left;
+  background-color: #ed2;
+}
