--- a/src/main/webapp/WEB-INF/html/view/news.html
+++ b/src/main/webapp/WEB-INF/html/view/news.html
@@ -3,8 +3,7 @@
 <head>
 	<title>戴丝诺</title>
     <meta name="view" content="view/news/main"/>
-    <meta name="defaultview" content="view/default"/>
-    <link rel="stylesheet" href="../../App/css/global/helper.css"/>
+    <meta name="defaultview" content="view/global/default"/>
     <link rel="stylesheet" href="../../App/css/view/news/main.css"/>
 </head>
 <body>
