--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -89,4 +89,9 @@
 		width 120px
 		float left
 		background-color: #ed2
-
+.videoFrame
+	position absolute
+	top 100px
+	height 500px
+	width 520px
+	margin 0 auto
