--- a/src/main/webapp/App/css/view/index/main.css
+++ b/src/main/webapp/App/css/view/index/main.css
@@ -581,3 +581,10 @@ a.cbule5:visited {
   float: left;
   background-color: #ed2;
 }
+.videoFrame {
+  position: absolute;
+  top: 100px;
+  height: 500px;
+  width: 520px;
+  margin: 0 auto;
+}
