--- a/src/main/webapp/WEB-INF/html/view/admin.html
+++ b/src/main/webapp/WEB-INF/html/view/admin.html
@@ -1,10 +1,19 @@
 <!DOCTYPE html>
-<html>
-<head lang="en">
-	<meta charset="UTF-8">
-	<title></title>
+<html xmlns:th="http://www.thymeleaf.org">
+<head>
+	<title>戴丝诺</title>
+	<meta name="view" content="view/admin/main"/>
+	<meta name="defaultview" content="view/global/default"/>
+	<link rel="stylesheet" href="../../App/css/view/admin/main.css"/>
+	<!--<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>-->
+	<!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">-->
+	<!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>-->
+	<!--<link href="//netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.min.css" rel="stylesheet">-->
+	<!--<script src="/../../App/lib/plugin/asset/summernote/summernote.min.js"></script>-->
+
 </head>
 <body>
 
 </body>
+
 </html>
