--- a/src/main/webapp/App/css/view/index/main.css
+++ b/src/main/webapp/App/css/view/index/main.css
@@ -265,7 +265,7 @@ a.cbule5:visited {
 .bgPictureShow {
   position: absolute;
   height: 800px;
-  min-width: 1200px;
+  min-width: 1080px;
   left: 0;
   top: 0;
   z-index: -1;
@@ -283,9 +283,15 @@ a.cbule5:visited {
 .imgPos li {
   display: block;
   cursor: pointer;
+  height: 16px;
+  width: 16px;
+  background: url("/App/image/global/indexbg/uncheck.png");
+}
+.img_active {
+  background: url("/App/image/global/indexbg/check.png") !important;
 }
 #wrap {
-  height: 660px;
+  height: 640px;
   width: 1080px;
   margin: 0 auto;
 }
@@ -360,8 +366,7 @@ a.cbule5:visited {
   margin: 0 auto;
 }
 .headMain {
-  height: 50px;
-  width: 1080px;
+  width: 100%;
   margin: 0 auto;
   position: relative;
 }
@@ -376,30 +381,34 @@ a.cbule5:visited {
   float: left;
 }
 .headMain .headRight {
-  width: 220px;
-  margin-left: 100px;
-  float: left;
+  width: 230px;
+  height: 60px;
+  position: absolute;
+  left: 78%;
+  top: 20px;
 }
 .headMain .headRight .leaveMsg,
 .headMain .headRight .weixin,
 .headMain .headRight .email {
+  width: 72px;
+  height: 36px;
   float: left;
-  margin-right: 10px;
   cursor: pointer;
 }
-.headMain .headRightHide .weixinHide {
+.headMain .headRightHide {
+  width: 230px;
+  height: 60px;
   position: absolute;
+  left: 78%;
+  top: 80px;
+}
+.headMain .headRightHide .weixinHide {
   display: none;
-  top: 50px;
-  left: 850px;
   width: 150px;
   height: 150px;
 }
 .headMain .headRightHide .emailHide {
-  position: absolute;
   display: none;
-  top: 50px;
-  left: 900px;
   width: 180px;
   height: 40px;
   background-color: #ee0101;
@@ -469,7 +478,7 @@ a.cbule5:visited {
   margin-top: 20px;
 }
 .content {
-  height: 660px;
+  height: 640px;
   min-width: 1080px;
   overflow-y: hidden;
 }
@@ -515,8 +524,8 @@ a.cbule5:visited {
   height: 80px;
   width: 80px;
   margin: 5px;
-  background-color: #e27c79;
   float: left;
+  background: url("/App/image/global/logo/diaofashishang.jpg") no-repeat center;
 }
 .productInfo .productList .productListSummary {
   height: 120px;
