--- a/src/main/webapp/WEB-INF/html/view/admin.html
+++ b/src/main/webapp/WEB-INF/html/view/admin.html
@@ -4,7 +4,7 @@
 	<title>戴丝诺</title>
 	<meta name="view" content="view/admin/main"/>
 	<meta name="defaultview" content="view/global/default"/>
-	<link rel="stylesheet" href="../../App/css/view/admin/main.css"/>
+	<link rel="stylesheet" href="/App/css/view/admin/main.css"/>
 	<!--<script src="//code.jquery.com/jquery-1.9.1.min.js"></script>-->
 	<!--<link href="//netdna.bootstrapcdn.com/bootstrap/3.0.1/css/bootstrap.min.css" rel="stylesheet">-->
 	<!--<script src="//netdna.bootstrapcdn.com/bootstrap/3.0.1/js/bootstrap.min.js"></script>-->
