--- a/src/main/webapp/App/css/global/external.css
+++ b/src/main/webapp/App/css/global/external.css
@@ -18,7 +18,6 @@
 	z-index: -1;
 	filter: alpha(opacity=20);
 }
-
 .contentDivMask {
 	width: 260px;
 	height: 180px;
@@ -28,8 +27,10 @@
 	overflow: hidden;
 	opacity: 0.5;
 	filter : alpha(opacity = 50);
+	z-index: -1;
+	background: #111;
 }
 .contentDiv img{
-	opacity: 0.8;
-	filter : alpha(opacity = 80);
+	opacity: 0.5;
+	filter : alpha(opacity = 50);
 }
