--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -1,9 +1,10 @@
 .content
-	height 660px
+	height 640px
 	min-width 1080px
 	overflow-y hidden
 .contentWrap
 	margin-top 480px
+
 .contentDiv
 	width: 260px
 	height: 180px
@@ -38,13 +39,14 @@
 			height 80px
 			width 80px
 			margin 5px
-			background-color: #e27c79
 			float left
+			background: url('/App/image/global/logo/diaofashishang.jpg') no-repeat center;
 		.productListSummary
 			height 120px
 			width 160px
 			text-align center
 			float left
+
 .contentNews,.contentProduct,.contentJoin
 	width 100%
 	height 360px
