--- a/src/main/webapp/WEB-INF/html/view/zoujindsn.html
+++ b/src/main/webapp/WEB-INF/html/view/zoujindsn.html
@@ -4,7 +4,7 @@
 	<title>戴丝诺</title>
     <meta name="view" content="view/zoujindsn/main"/>
     <meta name="defaultview" content="view/global/default"/>
-    <link rel="stylesheet" href="../../App/css/view/zoujindsn/main.css"/>
+    <link rel="stylesheet" href="/App/css/view/zoujindsn/main.css"/>
 </head>
 <body>
 </body>
