--- a/src/main/webapp/WEB-INF/html/view/diaofazixun.html
+++ b/src/main/webapp/WEB-INF/html/view/diaofazixun.html
@@ -2,9 +2,9 @@
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
 	<title>戴丝诺</title>
-    <meta name="view" content="view/diaofaanli/main"/>
+    <meta name="view" content="view/diaofazixun/main"/>
     <meta name="defaultview" content="view/global/default"/>
-    <link rel="stylesheet" href="/App/css/view/diaofaanli/main.css"/>
+    <link rel="stylesheet" href="/App/css/view/diaofazixun/main.css"/>
 </head>
 <body>
 </body>
