--- a/src/main/webapp/App/css/view/index/main.styl
+++ b/src/main/webapp/App/css/view/index/main.styl
@@ -88,9 +88,16 @@
 	color #fff
 	.joinUsTitle
 		height 40px
-		width 120px
-		float left
-		background-color: #ed2
+		width 180px
+		font-size 16px
+		color #d8943a
+	.joinUsIntroduction
+		height 80px
+		width 260px
+		text-align left
+	.hotTelphone
+		color #898000
+		font-size 18px
 .videoFrame
 	position absolute
 	top 100px
