--- a/src/main/webapp/App/css/view/zoujindsn/main.styl
+++ b/src/main/webapp/App/css/view/zoujindsn/main.styl
@@ -1,91 +1,93 @@
-.content
-	height 660px
-	min-width 1080px
-	overflow-y hidden
-.contentWrap
-	margin-top 480px
-.contentDiv
-	width: 260px
-	height: 180px
-	float: left
-	margin: 0 5px
-	position: relative
-	overflow: hidden
-	img
-		width 100%
-		height 180px
+#wrap
+	background-color rgb(238,238,238)
+.content-left
+	float left
+	width 220px
+	height 600px
+.content-right
+	float left
+	width 860px
+	height 100%
+.catalog-list
+	float left
+	width 220px
+	height 600px
+	.catalog-head
+		margin 10px auto
+	.catalog-erweiCode
+		padding-top 15px
+		background-color rgb(5,79,44)
 
-.productInfo
-	width 100%
-	height 180px
-	color #fff
-	.pruductTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.productMore
-		float right
-		height 40px
-		width 80px
+.catalog-items
+	background-color rgb(5,79,44)
+	cursor pointer
+	.catalog-item
+		height 55px
+		line-height 55px
 		font-size 18px
-	.productList
-		height 140px
-		width 260px
-		float left
-		.productListImg
-			height 80px
-			width 80px
-			margin 5px
-			background-color: #e27c79
-			float left
-		.productListSummary
-			height 120px
-			width 160px
-			text-align center
-			float left
-.contentNews,.contentProduct,.contentJoin
+		color #eee
+		.catalog-item-in
+			height 55px
+			width 120px
+			border-bottom 1px solid #eee
+			margin 0 auto
+	.item-atived
+		background-color rgb(137, 128, 0)
+		.catalog-item-in
+			border-bottom none
+.content-article
+	display none
+	padding 40px
+.content-head-title
+	font-size 28px
+	border-bottom 5px solid #898000
+	width 120px
+	float left
+.content-head-title-eng
+	font-size 16px
+	display block
+	text-align left
+	line-height 52px
+	color #bbb
+.content-main-head
+	height 45px
+	border-bottom 1px solid #ddd
+.introduction-company
+	font-size 20px
+	text-align left
+	color #898000
+	line-height 60px
+.introduction-company-eng
+	font-size 14px
+	text-align left
+	color #898000
+	margin-bottom 10px
+.introduction tr td
+	font-size 14px
+	text-align left
+	color #333
+	line-height 30px
+#cooperation-support,#cooperation-line,#cooperation-standard,#cooperation-return
+	width 125px
+	float left
+	border-right 2px solid #333333
+	font-size 16px
+#cooperation-support-content,#cooperation-line-content,#cooperation-standard-content,#cooperation-return-content
+	display none
+.cooperation
 	width 100%
-	height 360px
-	position: absolute
-.news
-	width 100%
-	height 180px
-	color #fff
-	.newsTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.newsMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.newsList
-		height: 140px;
-		width: 260px;
-		float: left;
-		ul li
-			margin-top 10px
-			a
-				color #fff
-			.listTitle
-				display inline-block
-				width 150px
-				height 20px
-				overflow hidden
-			.listDate
-				display inline-block
-				float right
-.joinUs
-	width 100%
-	height 180px
-	color #fff
-	.joinUsTitle
-		height 40px
-		width 120px
-		float left
-		background-color: #ed2
+	height 30px
+	.cooperation-head
+		width 100%
+		height 100%
+		.cooperation-head-wrap
+			width 500px
+			height 100%
+			margin 0 auto
+			margin-top 20px
+			.cooperation-click
+				color #898000
+.brand-introduction-img, .movies
+	height 400px
+	width 640px
+	margin 20px auto
