--- a/src/main/webapp/App/css/view/diaofajianshang/main.css
+++ b/src/main/webapp/App/css/view/diaofajianshang/main.css
@@ -429,6 +429,7 @@ a.cbule5:visited {
   height: 200px;
   display: none;
   position: absolute;
+  z-index: 2;
 }
 .headSubDivWrap {
   position: relative;
@@ -477,116 +478,80 @@ a.cbule5:visited {
 .headSubImg img {
   margin-top: 20px;
 }
-.content {
-  height: 660px;
-  min-width: 1080px;
-  overflow-y: hidden;
+#wrap {
+  height: 100%;
 }
-.contentWrap {
-  margin-top: 480px;
-}
-.contentDiv {
-  width: 260px;
-  height: 180px;
-  float: left;
-  margin: 0 5px;
-  position: relative;
-  overflow: hidden;
-}
-.contentDiv img {
+.content-img {
   width: 100%;
-  height: 180px;
+  height: 600px;
 }
-.productInfo {
+.content-img .content-main-nav {
+  width: 180px;
+  height: 600px;
+  float: left;
+}
+.content-img .content-main-nav .content-main-nav-wrap .content-main-nav-item {
+  width: 180px;
+  height: 200px;
+  background-color: #0c4e32;
+  color: #eee;
+  font-size: 20px;
+  line-height: 200px;
+  cursor: pointer;
+}
+.content-img .content-main-nav .content-main-nav-wrap .clicked {
+  background-color: #898000;
+}
+.content-img .content-img-wrap {
+  width: 900px;
+  height: 600px;
+  float: left;
+}
+.content-img .content-img-wrap img {
   width: 100%;
-  height: 180px;
-  color: #fff;
+  height: 100%;
 }
-.productInfo .pruductTitle {
-  height: 40px;
-  width: 160px;
+.content-main .peidaiyanshi-main {
+  height: 600px;
+  width: 900px;
+  background-color: #fff;
+}
+.content-main .peidaiyanshi-introduction {
   float: left;
-  font-size: 16px;
-  color: #d8943a;
+  height: 600px;
+  width: 450px;
+  padding: 50px;
 }
-.productInfo .productMore {
-  float: right;
-  height: 40px;
-  width: 80px;
-  font-size: 18px;
+.content-main .peidaiyanshi-introduction img {
+  height: 200px;
+  width: 340px;
 }
-.productInfo .productList {
-  height: 140px;
-  width: 260px;
-  float: left;
+.content-main .peidaiyanshi-introduction .content-main-head {
+  height: 45px;
+  border-bottom: 1px solid #ddd;
 }
-.productInfo .productList .productListImg {
-  height: 80px;
-  width: 80px;
-  margin: 5px;
-  background-color: #e27c79;
-  float: left;
-}
-.productInfo .productList .productListSummary {
-  height: 120px;
-  width: 160px;
-  text-align: center;
-  float: left;
-}
-.contentNews,
-.contentProduct,
-.contentJoin {
-  width: 100%;
-  height: 360px;
-  position: absolute;
-}
-.news {
-  width: 100%;
-  height: 180px;
-  color: #fff;
-}
-.news .newsTitle {
-  height: 40px;
-  width: 160px;
-  float: left;
-  font-size: 16px;
-  color: #d8943a;
-}
-.news .newsMore {
-  float: right;
-  height: 40px;
-  width: 80px;
-  font-size: 18px;
-}
-.news .newsList {
-  height: 140px;
-  width: 260px;
-  float: left;
-}
-.news .newsList ul li {
-  margin-top: 10px;
-}
-.news .newsList ul li a {
-  color: #fff;
-}
-.news .newsList ul li .listTitle {
-  display: inline-block;
-  width: 150px;
-  height: 20px;
-  overflow: hidden;
-}
-.news .newsList ul li .listDate {
-  display: inline-block;
-  float: right;
-}
-.joinUs {
-  width: 100%;
-  height: 180px;
-  color: #fff;
-}
-.joinUs .joinUsTitle {
-  height: 40px;
+.content-main .peidaiyanshi-introduction .content-main-head .content-head-title {
+  font-size: 28px;
+  border-bottom: 5px solid #898000;
   width: 120px;
   float: left;
-  background-color: #ed2;
+}
+.content-main .peidaiyanshi-introduction .content-main-head .content-head-title-eng {
+  font-size: 16px;
+  display: block;
+  text-align: left;
+  line-height: 52px;
+  color: #bbb;
+}
+.content-main .article-introduction img {
+  height: 100%;
+  width: 100%;
+}
+.content-wrap {
+  position: relative;
+}
+#peidaiyanshi-main {
+  position: absolute;
+  top: 0;
+  left: 180px;
 }
