--- a/src/main/webapp/App/css/view/diaofajianshang/main.styl
+++ b/src/main/webapp/App/css/view/diaofajianshang/main.styl
@@ -1,91 +1,64 @@
-.content
-	height 660px
-	min-width 1080px
-	overflow-y hidden
-.contentWrap
-	margin-top 480px
-.contentDiv
-	width: 260px
-	height: 180px
-	float: left
-	margin: 0 5px
-	position: relative
-	overflow: hidden
-	img
-		width 100%
-		height 180px
+#wrap
+	height 100%
+.content-img
+	width 100%
+	height 600px
+	.content-main-nav
+		width 180px
+		height 600px
+		float left
+		.content-main-nav-wrap
+			.content-main-nav-item
+				width 180px
+				height 200px
+				background-color #0C4E32
+				color #eee
+				font-size 20px
+				line-height 200px
+				cursor pointer
+			.clicked
+				background-color #898000
+	.content-img-wrap
+		width 900px
+		height 600px
+		float left
+		img
+			width 100%
+			height 100%
+.content-main
+	.peidaiyanshi-main
+		height 600px
+		width 900px
+		background-color #fff
+	.peidaiyanshi-introduction
+		float left
+		height 600px
+		width 450px
+		padding 50px
+		img
+			height 200px
+			width 340px
+		.content-main-head
+			height 45px
+			border-bottom 1px solid #ddd
+			.content-head-title
+				font-size 28px
+				border-bottom 5px solid #898000
+				width 120px
+				float left
+			.content-head-title-eng
+				font-size 16px
+				display block
+				text-align left
+				line-height 52px
+				color #bbb
 
-.productInfo
-	width 100%
-	height 180px
-	color #fff
-	.pruductTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.productMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.productList
-		height 140px
-		width 260px
-		float left
-		.productListImg
-			height 80px
-			width 80px
-			margin 5px
-			background-color: #e27c79
-			float left
-		.productListSummary
-			height 120px
-			width 160px
-			text-align center
-			float left
-.contentNews,.contentProduct,.contentJoin
-	width 100%
-	height 360px
-	position: absolute
-.news
-	width 100%
-	height 180px
-	color #fff
-	.newsTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.newsMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.newsList
-		height: 140px;
-		width: 260px;
-		float: left;
-		ul li
-			margin-top 10px
-			a
-				color #fff
-			.listTitle
-				display inline-block
-				width 150px
-				height 20px
-				overflow hidden
-			.listDate
-				display inline-block
-				float right
-.joinUs
-	width 100%
-	height 180px
-	color #fff
-	.joinUsTitle
-		height 40px
-		width 120px
-		float left
-		background-color: #ed2
+	.article-introduction img
+		height 100%
+		width 100%
+.content-wrap
+	position relative
+#peidaiyanshi-main
+	position absolute
+	top 0
+	left 180px
