--- a/src/main/webapp/App/css/view/diaofazhishi/main.css
+++ b/src/main/webapp/App/css/view/diaofazhishi/main.css
@@ -429,6 +429,7 @@ a.cbule5:visited {
   height: 200px;
   display: none;
   position: absolute;
+  z-index: 2;
 }
 .headSubDivWrap {
   position: relative;
@@ -477,116 +478,58 @@ a.cbule5:visited {
 .headSubImg img {
   margin-top: 20px;
 }
-.content {
-  height: 660px;
-  min-width: 1080px;
-  overflow-y: hidden;
+#wrap {
+  height: 100%;
 }
-.contentWrap {
-  margin-top: 480px;
-}
-.contentDiv {
-  width: 260px;
-  height: 180px;
-  float: left;
-  margin: 0 5px;
+.content-img {
   position: relative;
-  overflow: hidden;
 }
-.contentDiv img {
-  width: 100%;
-  height: 180px;
+.content-img img {
+  height: 400px;
+  width: 1080px;
 }
-.productInfo {
-  width: 100%;
-  height: 180px;
-  color: #fff;
-}
-.productInfo .pruductTitle {
-  height: 40px;
-  width: 160px;
-  float: left;
-  font-size: 16px;
-  color: #d8943a;
-}
-.productInfo .productMore {
-  float: right;
-  height: 40px;
-  width: 80px;
-  font-size: 18px;
-}
-.productInfo .productList {
-  height: 140px;
-  width: 260px;
-  float: left;
-}
-.productInfo .productList .productListImg {
-  height: 80px;
-  width: 80px;
-  margin: 5px;
-  background-color: #e27c79;
-  float: left;
-}
-.productInfo .productList .productListSummary {
-  height: 120px;
-  width: 160px;
-  text-align: center;
-  float: left;
-}
-.contentNews,
-.contentProduct,
-.contentJoin {
-  width: 100%;
-  height: 360px;
+.content-main-nav {
+  height: 50px;
   position: absolute;
+  bottom: 0;
+  left: 270px;
 }
-.news {
-  width: 100%;
-  height: 180px;
-  color: #fff;
+.content-main-nav .content-main-nav-wrap {
+  position: absolute;
+  margin: 0 auto;
+  width: 540px;
 }
-.news .newsTitle {
-  height: 40px;
-  width: 160px;
+.content-main-nav .content-main-nav-wrap .content-main-nav-item {
+  width: 180px;
   float: left;
-  font-size: 16px;
-  color: #d8943a;
-}
-.news .newsMore {
-  float: right;
-  height: 40px;
-  width: 80px;
+  background-color: #094424;
+  color: #eee;
   font-size: 18px;
+  line-height: 50px;
+  border-right: 1px dashed #eee;
+  cursor: pointer;
 }
-.news .newsList {
-  height: 140px;
-  width: 260px;
-  float: left;
+.content-main-nav .content-main-nav-wrap .clicked {
+  background-color: #8a7c0c;
 }
-.news .newsList ul li {
-  margin-top: 10px;
+.content-main-article {
+  display: none;
+  padding: 40px;
 }
-.news .newsList ul li a {
-  color: #fff;
-}
-.news .newsList ul li .listTitle {
-  display: inline-block;
-  width: 150px;
-  height: 20px;
-  overflow: hidden;
-}
-.news .newsList ul li .listDate {
-  display: inline-block;
-  float: right;
-}
-.joinUs {
-  width: 100%;
-  height: 180px;
-  color: #fff;
-}
-.joinUs .joinUsTitle {
-  height: 40px;
+.content-head-title {
+  font-size: 28px;
+  border-bottom: 5px solid #898000;
   width: 120px;
   float: left;
-  background-color: #ed2;
+}
+.content-head-title-eng {
+  font-size: 16px;
+  display: block;
+  text-align: left;
+  line-height: 52px;
+  color: #bbb;
+}
+.content-main-head {
+  height: 45px;
+  border-bottom: 1px solid #ddd;
 }
