--- a/src/main/webapp/App/css/view/diaofazhishi/main.styl
+++ b/src/main/webapp/App/css/view/diaofazhishi/main.styl
@@ -1,91 +1,47 @@
-.content
-	height 660px
-	min-width 1080px
-	overflow-y hidden
-.contentWrap
-	margin-top 480px
-.contentDiv
-	width: 260px
-	height: 180px
-	float: left
-	margin: 0 5px
-	position: relative
-	overflow: hidden
+#wrap
+	height 100%
+.content-img
+	position relative
 	img
-		width 100%
-		height 180px
+		height 400px
+		width 1080px
 
-.productInfo
-	width 100%
-	height 180px
-	color #fff
-	.pruductTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.productMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.productList
-		height 140px
-		width 260px
-		float left
-		.productListImg
-			height 80px
-			width 80px
-			margin 5px
-			background-color: #e27c79
+.content-main-nav
+	height 50px
+	position absolute
+	bottom 0
+	left 270px
+
+	.content-main-nav-wrap
+		position absolute
+		margin 0 auto
+		width 540px
+		.content-main-nav-item
+			width 180px
 			float left
-		.productListSummary
-			height 120px
-			width 160px
-			text-align center
-			float left
-.contentNews,.contentProduct,.contentJoin
-	width 100%
-	height 360px
-	position: absolute
-.news
-	width 100%
-	height 180px
-	color #fff
-	.newsTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.newsMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.newsList
-		height: 140px;
-		width: 260px;
-		float: left;
-		ul li
-			margin-top 10px
-			a
-				color #fff
-			.listTitle
-				display inline-block
-				width 150px
-				height 20px
-				overflow hidden
-			.listDate
-				display inline-block
-				float right
-.joinUs
-	width 100%
-	height 180px
-	color #fff
-	.joinUsTitle
-		height 40px
-		width 120px
-		float left
-		background-color: #ed2
+			background-color #094424
+			color #EEEEEE
+			font-size 18px
+			line-height 50px
+			border-right 1px dashed #eee
+			cursor pointer
+		.clicked
+			background-color #8A7C0C
+.content-main-article
+	display none
+	padding 40px
+.content-head-title
+	font-size 28px
+	border-bottom 5px solid #898000
+	width 120px
+	float left
+.content-head-title-eng
+	font-size 16px
+	display block
+	text-align left
+	line-height 52px
+	color #bbb
+.content-main-head
+	height 45px
+	border-bottom 1px solid #ddd
+
