--- a/src/main/webapp/App/css/view/diaofazixun/main.styl
+++ b/src/main/webapp/App/css/view/diaofazixun/main.styl
@@ -1,91 +1,47 @@
-.content
-	height 660px
-	min-width 1080px
-	overflow-y hidden
-.contentWrap
-	margin-top 480px
-.contentDiv
-	width: 260px
-	height: 180px
-	float: left
-	margin: 0 5px
-	position: relative
-	overflow: hidden
-	img
-		width 100%
-		height 180px
 
-.productInfo
-	width 100%
-	height 180px
-	color #fff
-	.pruductTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.productMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.productList
-		height 140px
-		width 260px
-		float left
-		.productListImg
-			height 80px
-			width 80px
-			margin 5px
-			background-color: #e27c79
-			float left
-		.productListSummary
-			height 120px
-			width 160px
-			text-align center
-			float left
-.contentNews,.contentProduct,.contentJoin
-	width 100%
-	height 360px
-	position: absolute
-.news
-	width 100%
-	height 180px
-	color #fff
-	.newsTitle
-		height 40px
-		width 160px
-		float left
-		font-size 16px
-		color #d8943a
-	.newsMore
-		float right
-		height 40px
-		width 80px
-		font-size 18px
-	.newsList
-		height: 140px;
-		width: 260px;
-		float: left;
-		ul li
-			margin-top 10px
-			a
-				color #fff
-			.listTitle
-				display inline-block
-				width 150px
-				height 20px
-				overflow hidden
-			.listDate
-				display inline-block
-				float right
-.joinUs
-	width 100%
-	height 180px
-	color #fff
-	.joinUsTitle
-		height 40px
-		width 120px
-		float left
-		background-color: #ed2
+.content
+	.content-main
+		height 450px
+		margin-top 20px
+		.content-detail-wrap
+			height 450px
+			width 1080px
+			display none
+
+
+			.content-xinwendongtai-left,.content-xinwendongtai-right,.content-chanpinzixun-left,.content-chanpinzixun-right
+				height 450px
+				width 540px
+				float left
+		.actived
+			display block
+		.content-detail-list
+			height 400px
+			li
+				height 40px
+				line-height 40px
+				text-align left
+				padding-left 50px
+				font-weight bold
+				.list-item-wrap
+					color #123
+					.item-right
+						float right
+	.content-nav
+		height 50px
+		width 1080px
+		.content-nav-wrap
+			height 50px
+			width 1080px
+			.content-nav-item
+				height 50px
+				width 540px
+				float left
+				font-size 20px
+				line-height 50px
+				color #EEEEEE
+				cursor pointer
+				background-color: #034F2B
+			.clicked
+				background-color: #898000
+				
