--- a/src/main/webapp/App/css/view/zoujindsn/main.styl
+++ b/src/main/webapp/App/css/view/zoujindsn/main.styl
@@ -72,6 +72,7 @@
 	float left
 	border-right 2px solid #333333
 	font-size 16px
+	cursor pointer
 #cooperation-support-content,#cooperation-line-content,#cooperation-standard-content,#cooperation-return-content
 	display none
 .cooperation
